<resources>
    <string name="app_name">AR람</string>
    <string name="remain_time">등록된 알람이 없습니다.</string>
    <string name="admob_app_id">ca-app-pub-1719157373734547~4794765830</string>
    <string name="admob_app_id_for_test">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_native_unit_id">ca-app-pub-1719157373734547/3133865039</string>
    <string name="admob_native_unit_id_for_test">ca-app-pub-3940256099942544/2247696110</string>
    <string name="admob_banner_unit_id">ca-app-pub-1719157373734547/2782828470</string>
    <string name="admob_banner_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>

    <string name="title_activity_main">alARm</string>
    <string name="title_activity_configuration">설정</string>
    <string name="title_activity_alarm_setting">알람 설정</string>

    <!-- Preference Titles -->
    <string name="alarm_header">알람</string>
    <string name="normal_header">일반</string>

    <!-- Messages Preferences -->
    <string name="pref_status_bar_notification_title">상단바 알림</string>
    <string name="pref_status_bar_notification_summary">상단바에 다음 알람시간을 표시합니다.</string>
    <string name="pref_disturb_mode_title">방해금지모드에서도 알람 허용</string>
    <string name="pref_disturb_mode_summary">방해금지모드에서도 알람이 울립니다</string>
    <string name="pref_always_max_volume_title">언제나 최대 볼륨</string>
    <string name="pref_always_max_volume_summary">알람이 항상 최대 볼륨으로 울립니다</string>
    <string name="pref_onboarding_title">AR 도움말 다시보기</string>
    <string name="pref_app_info_title">앱 정보</string>

    <!-- onBoarding Messages -->
    <string name="onboarding1_title">준비 - 스캐너</string>
    <string name="onboarding2_title">준비 - 이미지</string>
    <string name="onboarding3_title">이미지 등록</string>
    <string name="onboarding4_title">프리뷰</string>
    <string name="onboarding5_title">미로 생성 확인</string>

    <string name="onboarding1_desc">Google PhotoScan 앱(또는 스캐너)을 준비합니다.\n</string>
    <string name="onboarding2_desc">
        1.미로를 증강시킬 이미지를 준비합니다.\n
        (예시는 개발자의 마우스패드입니다.)\n\n
        2.스캐너 앱을 이용해 선명한 이미지를 생성합니다.\n\n
        [중요] 단순한 패턴의 이미지는 미로가 증강되지 않습니다.</string>
    <string name="onboarding3_desc">
        1.알람 설정에서 AR 모드를 선택합니다.\n\n
        2.스캔한 이미지를 선택합니다.</string>
    <string name="onboarding4_desc">
        1.프리뷰를 통해 미로가 증강되는지 확인합니다.\n\n
        2.미로가 생성되지 않는다면 다른 이미지가 필요합니다.</string>
    <string name="onboarding5_desc">
        1.미로 안의 공을 탈출시키면 알람이 꺼집니다.\n\n
        2.미로가 생성되지 않으면 알람을 끌 수 없으니.\n  꼭 프리뷰를 확인하세요!\n\n
        [Tip] 해당 이미지를 침실에서 멀리 두세요</string>

    <string name="close_dialog_title">앱을 종료할까요?</string>
    <string name="close_dialog_msg">오늘도 좋은하루 되세요!</string>
    <string name="close_dialog_yes_btn">종료</string>
    <string name="close_dialog_no_btn">취소</string>

    <string name="goodMorningMsg">좋은 아침입니다. 잘 일어나셨어요!</string>

    <string name="fit_image_to_scan">이미지를 맞춰주세요</string>

</resources>