<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/alarm_header">

        <SwitchPreference
            app:key="pref_status_bar_notification"
            app:title="@string/pref_status_bar_notification_title"
            app:summary="@string/pref_status_bar_notification_summary"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="pref_disturb_mode"
            app:title="@string/pref_disturb_mode_title"
            app:summary="@string/pref_disturb_mode_summary"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/normal_header">

        <Preference
            app:key="pref_onboarding"
            app:title="@string/pref_onboarding_title"/>


        <Preference
            app:key="pref_app_info"
            app:title="@string/pref_app_info_title"/>

    </PreferenceCategory>


</PreferenceScreen>